--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "element-ui": "^2.13.0",
     "postcss-pxtorem": "^4.0.1",
     "pxtorem": "^1.0.0",
+    "swiper": "^5.4.5",
     "visjs-network": "^4.24.11",
     "vue": "^2.6.10",
+    "vue-awesome-swiper": "^4.1.1",
     "vue-ls": "^3.2.1",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.2"
